--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <tr>
       <td>
         <div align="center">
-          <img width="180" src="./6DPose(JCST2021)/res.pdf" alt="">
+          <object data="./6DPose(JCST2021)/res.pdf"  type="application/pdf" width="180"></object>
         </div>
       </td>
       <td>
@@ -119,7 +119,7 @@
         <br>
         [<a href="./6DPose(JCST2021)/JCST2021PDF.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
-        [<a href="./6DPose(JCST2021)/highlight.pptx" target="_blank">Slides</a>]
+        [<a href="./6DPose(JCST2021)/Highlight.pptx" target="_blank">Slides</a>]
       </td>
     </tr>
     
