--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
         <br>
         <strong>Xiaolong Yang</strong>, 
         Xiaohong Jia, 
-        Dihong Gong,
         Yuan Liang,
         Lubin Fan
         <br> 
-        <i>Journal of Computer Science and Technology (JCST)-- Accepted.</i>
+        <i>Journal of Computer Science and Technology (JCST), 2021. -- Accepted</i>
         <br>
         [<a href="./6DPose(JCST2021)/JCST2021PDF.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
@@ -123,6 +122,25 @@
       </td>
     </tr>
     
+         <!-- SimplePrimitiveRecognition CVM2020 -->
+    <tr>
+      <td>
+        <div align="center">
+          <img width="180" src="./SPR(CVM2020)/res.jpg" alt="">
+        </div>
+      </td>
+      <td>
+        <a href=" https://link.springer.com/article/10.1007/s41095-020-0192-6" target="_blank">Simple Primitive Recognition via Hierarchical Face Clustering</a>        
+        <br>
+        <strong>Xiaolong Yang</strong>, 
+        Xiaohong Jia, 
+        <br> 
+        <i>Computational Visual Media (CVM)</i>,  Vol.6, No.4, pp.431-443.
+        <br>
+        [<a href="./SPR(CVM2020)/YangSPR2020.pdf" target="_blank">PDF</a>]
+        [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
+      </td>
+    </tr>
     
 
   </tbody>
