--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <tr>
       <td>
         <div align="center">
-          <object data="./6DPose(JCST2021)/res.pdf"  type="application/pdf" width="180"></object>
+           <img width="180" src="./6DPose(JCST2021)/6Dres.png"  alt="">
         </div>
       </td>
       <td>
@@ -114,7 +114,7 @@
         Yuan Liang,
         Lubin Fan
         <br> 
-        <i>Journal of Computer Science and Technology (JCST), 2021. -- Accepted</i>
+        <i>Journal of Computer Science and Technology (JCST)</i>, 2021. -- Accepted
         <br>
         [<a href="./6DPose(JCST2021)/JCST2021PDF.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
@@ -135,7 +135,7 @@
         <strong>Xiaolong Yang</strong>, 
         Xiaohong Jia, 
         <br> 
-        <i>Computational Visual Media (CVM)</i>,  Vol.6, No.4, pp.431-443.
+        <i>Computational Visual Media (CVM)</i>, Vol.6, No.4, pp.431-443, 2020.
         <br>
         [<a href="./SPR(CVM2020)/YangSPR2020.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
