--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <tr>
       <td>
         <div align="center">
-           <img width="180" src="./6DPose(JCST2021)/6Dres.png"  alt="">
+           <img width="180" src="./6DPose(JCST2021)/res.png"  alt="">
         </div>
       </td>
       <td>
@@ -148,7 +148,7 @@
     <tr>
       <td>
         <div align="center">
-          <img width="180" src="./SPR(CVM2020)/res.png" alt="">
+          <img width="180" src="./6DPose(SIGP2020)/res.png" alt="">
         </div>
       </td>
       <td>
