--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         RongPing Shen,
         Ziyin Zhang
         <br> 
-        <strong>First Price</strong> of the 15th China Post-Graduate Mathematical Contest in Modeling, recommended to <i>Journal of Mathematics in Practice and Theory</i>, Vol.49, No.16, pp.35-45, 2019.
+        <strong>First Prize</strong> of the 15th China Post-Graduate Mathematical Contest in Modeling, recommended to <i>Journal of Mathematics in Practice and Theory</i>, Vol.49, No.16, pp.35-45, 2019.
         <br>
         [<a href="./Diving(MPT2019)/YangMPT2019.pdf" target="_blank">PDF</a>]
         [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Prize</a>]
