--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </td>
       <td>
-        <a href=" https://arxiv.org/abs/2103.08147" target="_blank">LARNet: Lie Algebra Residual Network for Face Recognition</a>        
+        <a href="http://proceedings.mlr.press/v139/yang21d.html" target="_blank">LARNet: Lie Algebra Residual Network for Face Recognition</a>        
         <br>
         <strong>Xiaolong Yang</strong>, 
         Xiaohong Jia, 
