--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         [<a href="./LARNet(ICML2021)/xiaolonyang_ICML2021_Main.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
         [<a href="./LARNet(ICML2021)/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
-        [<a href="./LARNet(ICML2021)/ICML21_LARNet.pptx" target="_blank">Slides</a>]
+        [<a href="./LARNet(ICML2021)/ICML21_LARNet.pdf" target="_blank">Slides</a>]
       </td>
     </tr>
     
@@ -118,7 +118,7 @@
         <br>
         [<a href="./6DPose(JCST2021)/JCST2021PDF.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
-        [<a href="./6DPose(JCST2021)/Highlight.pptx" target="_blank">Slides</a>]
+        [<a href="./6DPose(JCST2021)/Highlight.pdf" target="_blank">Slides</a>]
       </td>
     </tr>
     
