--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <br>
         [<a href="./SPR(CVM2020)/YangSPR2020.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
+        [<a href="./SPR(CVM2020)/CVMzl.pdf" target="_blank">Patent</a>]
       </td>
     </tr>
     
