--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </tr>
     <tr>
       <td> Journal Reviewer：  &nbsp; </td>   
-      <td> T-PAMI, T-CSVT, Neurocomputing, The Visual Computer </td>
+      <td> T-PAMI, T-CSVT, Neurocomputing, The Visual Computer ... </td>
     </tr>
   
   </tbody>
