--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
   <tbody>
     <tr>
       <td> Conference Reviewer：  &nbsp; </td>   
-      <td> NeurIPS, ICML, CVPR, ICCV, ECCV, AAAI, CVM ... </td>
+      <td> NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AAAI, CVM ... </td>
     </tr>
     <tr>
       <td> Journal Reviewer：  &nbsp; </td>   
-      <td> T-PAMI, T-CSVT, Neurocomputing, The Visual Computer ... </td>
+      <td> T-PAMI, T-CSVT, T-NNLS, Neurocomputing, The Visual Computer ... </td>
     </tr>
   
   </tbody>
