--- a/index.html
+++ b/index.html
@@ -216,6 +216,34 @@
   </tbody>
 </table>  
 
+
+ <h2>Honorary Awards</h2>
+<table id="tbAwards" border="0" width="100%">
+  <tbody>
+    <tr>
+      <td> 2018 &nbsp; </td>   
+      <td> <strong> First Prize </strong> of the 15th China Post-Graduate Mathematical Contest in Modeling [<font color="#FF0000"> Top 1% </font>]</td>
+      <td> [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate</a>] </td>
+    </tr>
+    <tr>
+      <td> 2019 &nbsp; </td>   
+      <td> <strong> Pacemaker to Merit Student </strong> of CAS <font size="6" face="楷体_GB2312"> (中科院三好学生标兵) [<font color="#FF0000"> Top 1% </font>]</td>
+      <td> [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate</a>]  </td>
+    </tr>
+    <tr>
+      <td> 2020 - 2021 &nbsp; </td>   
+      <td> Excellent Merit Student of CAS <font size="6" face="楷体_GB2312"> (中科院优秀三好学生) </td>
+      <td> [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate2020</a>] &nbsp; [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate2021</a>]</td>
+     </tr>  
+      <tr>
+      <td> 2021 &nbsp; </td>   
+      <td> <strong> National Scholarship </strong> <font size="6" face="楷体_GB2312"> (国奖奖学金)  [<font color="#FF0000"> Top 1% </font>] </td>
+      <td> [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate</a>]  </td>
+    </tr>  
+  </tbody>
+</table> 
+
+
  <!--<h2>Research Experiences</h2>
 <table id="tbExperiences" border="0" width="100%">
   <tbody>
