--- a/index.html
+++ b/index.html
@@ -221,23 +221,23 @@
 <table id="tbAwards" border="0" width="100%">
   <tbody>
     <tr>
-      <td> 2018 &nbsp; </td>   
-      <td> <strong> First Prize </strong> of the 15th China Post-Graduate Mathematical Contest in Modeling [<font color="#FF0000" font size="4"> Top 1% </font>]</td>
+      <td> 2018 &nbsp; &nbsp;</td>   
+      <td> <strong> First Prize </strong> of the 15th China Post-Graduate Mathematical Contest in Modeling [<font color="#FF0000" font size="3"> Top 1% </font>]</td>
       <td> [<a href="./Awards/18MM.pdf" target="_blank">Certificate</a>] </td>
     </tr>
     <tr>
-      <td> 2019 &nbsp; </td>   
-      <td> <strong> Pacemaker to Merit Student </strong> of CAS <font size="4" face="楷体_GB2312"> (中科院三好学生标兵) [<font color="#FF0000" font size="4"> Top 1% </font>]</td>
+      <td> 2019 &nbsp; &nbsp;</td>   
+      <td> <strong> Pacemaker to Merit Student </strong> of CAS <font size="3" face="楷体_GB2312"> (中科院三好学生标兵)</font> [<font color="#FF0000" font size="3"> Top 1% </font>]</td>
       <td> [<a href="./Awards/19PMS.pdf" target="_blank">Certificate</a>]  </td>
     </tr>
     <tr>
       <td> 2020 - 2021 &nbsp; </td>   
-      <td> Excellent Merit Student of CAS <font size="4" face="楷体_GB2312"> (中科院优秀三好学生) </td>
+      <td> Excellent Merit Student of CAS <font size="3" face="楷体_GB2312"> (中科院优秀三好学生)</font> </td>
       <td> [<a href="./Awards/20MS.pdf" target="_blank">Certificate2020</a>] &nbsp; [<a href="./Awards/21MS.pdf" target="_blank">Certificate2021</a>]</td>
      </tr>  
       <tr>
-      <td> 2021 &nbsp; </td>   
-      <td> <strong> National Scholarship </strong> <font size="4" face="楷体_GB2312"> (国奖奖学金)  [<font color="#FF0000" font size="4"> Top 1% </font>] </td>
+      <td> 2021 &nbsp; &nbsp;</td>   
+      <td> <strong> National Scholarship </strong> <font size="3" face="楷体_GB2312"> (国奖奖学金)</font>  [<font color="#FF0000" font size="3"> Top 1% </font>] </td>
       <td> [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate</a>]  </td>
     </tr>  
   </tbody>
