--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
   <tbody>
     <tr>
       <td> 2018 </td>   
-      <td> <strong> First Prize </strong> of the 15th China Post-Graduate Mathematical Contest in Modeling [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]</td>
-      <td> [<a href="./Awards/18MM.pdf" target="_blank">Certificate</a>] </td>
+      <td> 
+       <a href="./Awards/18MM.pdf" target="_blank"><strong> First Prize </strong> of the 15th China Post-Graduate Mathematical Contest in Modeling</a> [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]   </td>
     </tr>
     <tr>
       <td> 2019 </td>   
