--- a/index.html
+++ b/index.html
@@ -221,25 +221,24 @@
 <table id="tbAwards" border="0" width="100%">
   <tbody>
     <tr>
-      <td> 2018 </td>   
+      <td> 2018&nbsp; </td>   
       <td> 
-       <a href="./Awards/18MM.pdf" target="_blank"><strong> First Prize </strong> of the 15th China Post-Graduate Mathematical Contest in Modeling</a> [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]   </td>
+       <a href="./Awards/18MM.pdf" target="_blank"><strong> First Prize </strong></a>  of the 15th China Post-Graduate Mathematical Contest in Modeling [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]   </td>
     </tr>
     <tr>
-      <td> 2019 </td>   
-      <td> <strong> Pacemaker to Merit Student </strong> of CAS <font size="3" face="楷体_GB2312"> (中科院三好学生标兵) </font> [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]</td>
-      <td> [<a href="./Awards/19PMS.pdf" target="_blank">Certificate</a>]  </td>
+      <td> 2019&nbsp; </td>   
+      <td> 
+           <a href="./Awards/19PMS.pdf" target="_blank"><strong> Pacemaker to Merit Student </strong></a>  of CAS <font size="3" face="楷体_GB2312"> (中科院三好学生标兵) </font> [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>] </td>
     </tr>
     <tr>
-      <td> 2020 <br>
-        -2021  </td>   
-      <td> Excellent Merit Student of CAS <font size="3" face="楷体_GB2312"> (中科院优秀三好学生)</font> </td>
-      <td> [<a href="./Awards/20MS.pdf" target="_blank">Certificate2020</a>], [<a href="./Awards/21MS.pdf" target="_blank">Certificate2021</a>]</td>
+      <td> 2020-2021  </td>   
+      <td> Excellent Merit Student of CAS <font size="3" face="楷体_GB2312"> (中科院优秀三好学生)</font> [<a href="./Awards/20MS.pdf" target="_blank">2020</a>, <a href="./Awards/21MS.pdf" target="_blank">2021</a>]</td>
      </tr>  
       <tr>
-      <td> 2021;</td>   
-      <td> <strong> National Scholarship </strong> <font size="3" face="楷体_GB2312"> (国家奖学金)</font>  [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>] </td>
-      <td> [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Certificate</a>]  </td>
+      <td> 2021&nbsp;</td>   
+      <td>   
+      <a href="./Diving(MPT2019)/prize.pdf" target="_blank"><strong> National Scholarship </strong></a>   <font size="3" face="楷体_GB2312"> (国家奖学金)</font>  [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]
+       </td>
     </tr>  
   </tbody>
 </table> 
