--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
         </div>
       </td>
       <td>
-        <a href=" https://arxiv.org/abs/2103.08147" target="_blank">6D Object Pose Estimation in Cluttered Scenes from RGB Images</a>        
+        <a href=" https://jcst.ict.ac.cn/EN/10.1007/s11390-021-1311-2" target="_blank">6D Object Pose Estimation in Cluttered Scenes from RGB Images</a>        
         <br>
         <strong>Xiaolong Yang</strong>, 
         Xiaohong Jia, 
         Yuan Liang,
         Lubin Fan
         <br> 
-        <i>Journal of Computer Science and Technology (JCST)</i>, 2021. -- Accepted
+        <i>Journal of Computer Science and Technology (JCST)</i>, 2021. 
         <br>
         [<a href="./6DPose(JCST2021)/JCST2021PDF.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
@@ -205,7 +205,7 @@
         RongPing Shen,
         Ziyin Zhang
         <br> 
-        <strong>First Prize</strong> of the 15th China Post-Graduate Mathematical Contest in Modeling, recommended to <i>Journal of Mathematics in Practice and Theory</i>, Vol.49, No.16, pp.35-45, 2019.
+        <strong><font color="#FF0000">First Prize</font></strong> of the 15th China Post-Graduate Mathematical Contest in Modeling, recommended to <i>Journal of Mathematics in Practice and Theory</i>, Vol.49, No.16, pp.35-45, 2019.
         <br>
         [<a href="./Diving(MPT2019)/YangMPT2019.pdf" target="_blank">PDF</a>]
         [<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Prize</a>]
@@ -244,12 +244,13 @@
 </table> 
 
 
- <!--<h2>Research Experiences</h2>
+ 
+<h2>Research Experiences</h2>
 <table id="tbExperiences" border="0" width="100%">
   <tbody>
     <tr>
       <td> Sep.2020 - Sep.2021 &nbsp; </td>   
-      <td> Visting student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Zhifeng Li</td>
+      <td> Visting student (Rhino-Bird Program), Tencent Technologies Co., Ltd. (Shenzhen), directed by <a href="https://scholar.google.com/citations?user=VTrRNN4AAAAJ&hl=zh-en" target="_blank"> Dr. Zhifeng Li</td>
     </tr>
     <tr>
       <td> Nov.2019 - Mar.2020 &nbsp; </td>   
@@ -260,7 +261,7 @@
       <td> Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
     </tr>  
   </tbody>
-</table> -->
+</table> 
 
 
  <h2>Academic Services</h2>
