--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <td> Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
     </tr>
     <tr>
-      <td> Mar.2017 - Now. &nbsp; </td>   
+      <td> Mar.2017 - Sep.2021 &nbsp; </td>   
       <td> Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
     </tr>  
   </tbody>
