--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify;">
-  I am currently pursuing my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is <a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
+  I am currently pursuing my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
 </p>
 <p> 
   My research interest includes computer graphics and computer vision. My resume can be found [<a href="./MyCV.pdf" target="_blank"> here </a>].
@@ -237,7 +237,7 @@
       <tr>
       <td> 2021&nbsp;</td>   
       <td>   
-      <a href="./Diving(MPT2019)/prize.pdf" target="_blank"><strong> National Scholarship </strong></a>   <font size="3" face="楷体_GB2312"> (国家奖学金)</font>  [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]
+      <a href="./Awards/21NP.pdf" target="_blank"><strong> National Scholarship </strong></a>   <font size="3" face="楷体_GB2312"> (国家奖学金)</font>  [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>]
        </td>
     </tr>  
   </tbody>
