--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         Yuan Liang,
         Lubin Fan
         <br> 
-        <i>Journal of Computer Science and Technology (JCST)</i>, 2021. 
+        <i>Journal of Computer Science and Technology (JCST)</i>, Vol.37, No.3, pp.719-730, 2022. 
         <br>
         [<a href="./6DPose(JCST2021)/JCST2021PDF.pdf" target="_blank">PDF</a>]
         [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
