--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
          <table>
          <tbody>
             <tr>
+              <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/platform.png" alt=""> </td>
+              <td> Platform, Tencent</td>
+           </tr>
+         </tbody>
+         </table>
+         <table>
+         <tbody>
+            <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/amss.png" alt=""> </td>
               <td> <a href="http://mmrc.amss.cas.cn/" target="_blank">Key Laboratory of Mathematics-Mechanization</a>(KLMM) of <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences</a>(AMSS, CAS)</td>
             </tr>
@@ -46,7 +54,7 @@
          <tbody>
             <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/email.png" alt=""> </td>
-              <td> Email: yangxiaolong17@mails.ucas.ac.cn</td>
+              <td> Email: xiaolonyang@tencent.com  and  yangxiaolong17@mails.ucas.ac.cn</td>
             </tr>
          </tbody>
          </table>
@@ -59,7 +67,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify;">
-  I am currently pursuing my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
+  I am currently a researcher at Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
 </p>
 <p> 
   My research interest includes computer graphics and computer vision. My resume can be found [<a href="./MyCV.pdf" target="_blank"> here </a>].
