--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <tbody>
             <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/platform.png" alt=""> </td>
-              <td> Platform, Tencent</td>
+              <td> Data Platform, Tencent</td>
            </tr>
          </tbody>
          </table>
@@ -54,7 +54,7 @@
          <tbody>
             <tr>
               <td> <img width="20" style="float: left; display: inline;" src="./Homepage_files/fig/email.png" alt=""> </td>
-              <td> Email: xiaolonyang@tencent.com  and  yangxiaolong17@mails.ucas.ac.cn</td>
+              <td> Email: xiaolonyang@tencent.com  [or]  yangxiaolong17@mails.ucas.ac.cn</td>
             </tr>
          </tbody>
          </table>
@@ -67,7 +67,7 @@
 
 <h2>Biography</h2>
 <p style="text-align:justify;">
-  I am currently a researcher at Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
+  I am currently a researcher at Data Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
 </p>
 <p> 
   My research interest includes computer graphics and computer vision. My resume can be found [<a href="./MyCV.pdf" target="_blank"> here </a>].
