--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
            <a href="./Awards/19PMS.pdf" target="_blank"><strong> Pacemaker to Merit Student </strong></a>  of CAS <font size="3" face="楷体_GB2312"> (中科院三好学生标兵) </font> [<font color="#FF0000" size="3" face="Times New Roman"> <i>Top 1%</i> </font>] </td>
     </tr>
     <tr>
-      <td> 2020-2021  </td>   
-      <td> Excellent Merit Student of CAS <font size="3" face="楷体_GB2312"> (中科院优秀三好学生)</font> [<a href="./Awards/20MS.pdf" target="_blank">2020</a>, <a href="./Awards/21MS.pdf" target="_blank">2021</a>]</td>
+      <td> 2020-2022 (3 years)  </td>   
+      <td> Excellent Merit Student of CAS <font size="3" face="楷体_GB2312"> (中科院优秀三好学生)</font> [<a href="./Awards/20MS.pdf" target="_blank">2020</a>, <a href="./Awards/21MS.pdf" target="_blank">2021</a>,<a href="./Awards/22MS.pdf" target="_blank">2022</a>]</td>
      </tr>  
       <tr>
       <td> 2021&nbsp;</td>   
