--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
 </tbody>
 </table>
 
+
+<h2>News about Professional Progress</h2>
+<table id="tbNews" border="0" width="100%">
+  <tbody>
+    <tr>
+      <td> Dec.2023 - Now &nbsp; </td>    
+      <td> <font size="8" face="楷体_GB2312"> 文生视频-双语视文CLIP  
+           <font size="6" face="宋体"> 1）实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；  
+                                      2）改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能的视文检索。</font></td>
+    </tr>
+    <tr>
+      <td> Nov.2019 - Mar.2020 &nbsp; </td>   
+      <td> Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
+    </tr>
+    <tr>
+      <td> Mar.2017 - Sep.2021 &nbsp; </td>   
+      <td> Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
+    </tr>  
+  </tbody>
+</table> 
+
+
+
+  
 <h2>Biography</h2>
 <p style="text-align:justify;">
   I am currently a researcher at Data Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
@@ -78,6 +102,33 @@
   <table border="0" width="100%">
   <tbody> 
 
+          <!-- LARNeXt TPAMI2023 -->
+    <tr>
+      <td>
+        <div align="center">
+          <img width="180" height="85" src="./LARNeXt(TPAMI2023)/Fig0_headpic.png" alt="">
+        </div>
+      </td>
+      <td>
+        <a href="https://ieeexplore.ieee.org/abstract/document/10143393" target="_blank">LARNeXt: End-to-End Lie Algebra Residual Network for Face Recognition</a>        
+        <br>
+        <strong>Xiaolong Yang</strong>, 
+        Xiaohong Jia, 
+        Dihong Gong,
+        Dong-Ming Yan,
+        Zhifeng Li,
+        Wei Liu
+        <br> 
+        <i>In IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI)</i>, Vol.45, No.10, pp.11961 - 11976, 2023.
+        <br>
+        [<a href="LARNet.html" target="_blank">Project Page</a>]
+        [<a href="./LARNeXt(TPAMI2023)/LARNeXt_End-to-End_Lie_Algebra_Residual_Network_for_Face_Recognition.pdf" target="_blank">PDF</a>]
+        [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
+        [<a href="./LARNet(ICML2021)/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
+        [<a href="./LARNet(ICML2021)/ICML21_LARNet.pdf" target="_blank">Slides</a>]
+      </td>
+    </tr>
+    
 
         <!-- LARNet ICML2021 -->
     <tr>
