--- a/LARNet.html
+++ b/LARNet.html
@@ -166,6 +166,29 @@ demonstrate that our method consistently outperforms the state-of-the-art ones.
 <h2>Bibtex</h2>
 <table>
   <tbody>
+    <tr>
+    <p style="text-align:left;">
+    <font face="Times New Roman" >
+      @inproceedings{Yang2023LARNeXt,
+      <br>
+       &nbsp &nbsp author={Xiaolong Yang, Xiaohong Jia, Dihong Gong, Dong-Ming Yan, ZhiFeng Li, Wei Liu},
+      <br>
+       &nbsp &nbsp title={LARNeXt: End-to-End Lie Algebra Residual Network for Face Recognition},
+      <br>
+       &nbsp &nbsp journal={IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI)},
+      <br>
+      &nbsp &nbsp volume={45},
+      <br>
+      &nbsp &nbsp number={10},
+      <br>
+      &nbsp &nbsp pages={11961-11976},
+      <br>
+       &nbsp &nbsp year={2023}
+      <br>
+      }
+    </font>
+    </p>
+  </tr>
   <tr>
     <p style="text-align:left;">
     <font face="Times New Roman" >
