--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
   <tbody>
     <tr>
       <td> Dec.2023 - Now &nbsp; </td>    
-      <td> <font size="8" face="楷体_GB2312"> 文生视频-双语视文CLIP  
-           <font size="6" face="宋体"> 1）实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；  
-                                      2）改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能的视文检索。</font></td>
+      <td> <font size="10" face="楷体_GB2312"> 文生视频-双语视文CLIP</font> 
+           <br>
+           <font size="12" face="宋体"> 1）实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；
+           <br>
+                                      2）改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能的视文检索。</font>
+           <br>    
+      </td>
     </tr>
     <tr>
       <td> Nov.2019 - Mar.2020 &nbsp; </td>   
