--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
   <tbody>
     <tr>
       <td> Dec.2023 - Now &nbsp; </td>    
-      <td> <font size="10" face="楷体_GB2312"> 文生视频-双语视文CLIP</font> 
+      <td> <font size="4" face="楷体_GB2312"> 文生视频-双语视文CLIP</font> 
            <br>
-           <font size="12" face="宋体"> 1）实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；
+           <font size="2" face="宋体"> 1）实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；</font>
            <br>
-                                      2）改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能的视文检索。</font>
+          <font size="2" face="宋体"> 2）改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能的视文检索。</font>
            <br>    
       </td>
     </tr>
@@ -98,7 +98,7 @@
   I am currently a researcher at Data Platform, Tencent. I received my PhD degree at <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science of the Chinese Academy of Sciences (AMSS, CAS)</a> and <a href="https://english.ucas.ac.cn/" target="_blank"> University of Chinese Academy of Sciences (UCAS) </a>. My supervisor is Prof.<a href="http://www.mmrc.iss.ac.cn/~xhjia/" target="_blank"> Xiaohong Jia </a>. Before that,   I received my Bachelor's degree of <a href="http://math.nwpu.edu.cn/en/home.htm" target="_blank"> Information and Computing Science</a> from <a href="https://en.nwpu.edu.cn/" target="_blank"> Northwestern Polytechnical University (NWPU)</a> in 2017. 
 </p>
 <p> 
-  My research interest includes computer graphics and computer vision. My resume can be found [<a href="./MyCV.pdf" target="_blank"> here </a>].
+  My current research spot is AIGC, including large models and multi-modality. My research interest also includes computer graphics and computer vision. My resume can be found [<a href="./MyCV.pdf" target="_blank"> here </a>].
 </p>
 
 <h2>Publications</h2>
