--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         Zhifeng Li,
         Wei Liu
         <br> 
-        <i>In IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI)</i>, Vol.45, No.10, pp.11961 - 11976, 2023.
+        <font size="2"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI)</i>, Vol.45, No.10, pp.11961 - 11976, 2023.</font>
         <br>
         [<a href="LARNet.html" target="_blank">Project Page</a>]
         [<a href="./LARNeXt(TPAMI2023)/LARNeXt_End-to-End_Lie_Algebra_Residual_Network_for_Face_Recognition.pdf" target="_blank">PDF</a>]
