--- a/index.html
+++ b/index.html
@@ -66,27 +66,55 @@
 </table>
 
 
-<h2>News about Professional Progress</h2>
+<h2>News about Achievements</h2>
 <table id="tbNews" border="0" width="100%">
   <tbody>
     <tr>
       <td> Dec.2023 - Now &nbsp; </td>    
-      <td> <font size="4" face="楷体_GB2312"> 文生视频-双语视文CLIP</font> 
+      <td> <font size="3" face="楷体_GB2312"> 文生视频-双语视文CLIP</font> 
            <br>
-           <font size="2" face="宋体"> 1）实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；</font>
+           <font size="2" face="宋体">&nbsp 1) 实现基于中英文词表的扩充训练，CN图文检索超过当前最强中文模型，EN图文检索略微弱于OpenCLIP；</font>
            <br>
-          <font size="2" face="宋体"> 2）改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能的视文检索。</font>
+           <font size="2" face="宋体">&nbsp 2) 改造图文接口为视文对象，训练视文CLIP并注重中文本地特色化的语义对齐，实现高性能中文的视文检索。</font>
            <br>    
       </td>
     </tr>
     <tr>
-      <td> Nov.2019 - Mar.2020 &nbsp; </td>   
-      <td> Intern student (Innovative Research Program), Alibaba Group (Beijing). </td>
+      <td> Aug.2023 - Dec.2023 &nbsp; </td>   
+      <td> <font size="3" face="楷体_GB2312"> 业务大模型(金融)-预训练、SFT</font> 
+           <br>
+           <font size="2" face="宋体">&nbsp 1) 基于英文的llama2-70B模型拓展中文和金融能力，探索扩充词表和训练方案的最优组合；
+           <br>
+             &nbsp&nbsp Few-shot对比：(with llama2原始模型) 英文能力+0，中文能力+7.5，金融能力+8.1；(with GPT3.5模型) 英文能力-1.7，中文能力+5.6，金融能力+11；</font>
+           <br>
+           <font size="2" face="宋体">&nbsp 2) 进行金融的指令微调训练，获得财报总结、行情异动分析等To B业务的可交互的定制化功能；</font>
+           <br>
+           <font size="2" face="宋体">&nbsp 3) 性能优越的预训练模型还提供给保险业务大模型、通用SFT大模型研究等多个业务作为base model使用。</font>
+           <br>
+      </td>
     </tr>
     <tr>
-      <td> Mar.2017 - Sep.2021 &nbsp; </td>   
-      <td> Visiting student,  National Laboratory of Pattern Recognition(NLPR), Institute of Automation, Chinese Academy of Sciences(CASIA) (Beijing), directed by <a href="https://sites.google.com/site/yandongming/" target="_blank"> Prof. Dong-Ming Yan</td>
-    </tr>  
+      <td> Apr.2023 - Aug.2023 &nbsp; </td>   
+      <td> <font size="3" face="楷体_GB2312"> 通用大模型(混元助手)-强化学习</font> 
+           <br>
+           <font size="2" face="宋体">&nbsp 1) 全面提升原有SFT模型(热启动、冷启动)在NLP基础任务、逻辑推理、多轮对话、领域应用等多个方面的薄弱不足项，版本发测多次领先基座SFT模型；
+           <br>
+           <font size="2" face="宋体">&nbsp 2) 提出引导式推理方案，调整ppo-ptx中主模型和奖励模型的交互策略，高效解决线上用户体验中的重点badcase问题；数学、物理计算题多次测试正确率提高约三倍，首次正确率0%->87%，强化模型的泛化推理能力得到显著提升；
+           <br>
+           <font size="2" face="宋体">&nbsp 3) 176b RM的训练和迭代，最终奖励模型的验证精度（模型对同源数据的学习能力）为76.96% ，对比竞品llama2 RM： Safety 64.3%、Helpfulness 70.6%； 测试精度（模型对异源数据的泛化能力）为70.41% ，对比构造prompt使用GPT4自动打分44.0% 。</font>
+           <br>
+      </td>
+    </tr>
+    <tr>
+      <td> Feb.2023 - Apr.2023 &nbsp; </td>   
+      <td> <font size="3" face="楷体_GB2312"> 业务大模型(广告)-营销话术的SFT和强化学习</font> 
+           <br>
+           <font size="2" face="宋体">&nbsp 1) 实现基于医美、口腔、眼科、植发等重点行业信息的AIGC封闭式问答机器人；现阶段已经在消费医疗赛道-口腔打造正向案例，其中头部客户对比人工设置的问答，AI生成问答沉淀的线索有效率提升 44%（37.93%→54.55%），成本降低 21%（1110.0→918.4）；
+           <br>
+           <font size="2" face="宋体">&nbsp 2) 基于客户喜好和转化需求，使用强化学习技术实现问答话术的个性化表达，兼具语言风格、交流能力、商品知识和营销导向等定制化的核心原子能力：拟人化程度高、态度亲切温和；理解商品相关行业属性知识图谱以及用户非专业表达的诉求；话术新鲜多样促进留存；
+           <br>
+      </td>
+    </tr> 
   </tbody>
 </table> 
 
