--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
       <td style="border-top:1px solid lightgray;"> 
            <font size="3" face="楷体_GB2312"> 隐私保护计算-大数据加密的高精度概率回归模型</font> 
            <ul>
-           <li><font size="2" face="宋体">&nbsp 1) 开发联合概率密度与错误标签后验概率的高精度模型，针对隐私加密通信数据具有极高的检索/判断精度。对于1K/5K/1W数量的未知加密样本，模型平均精度从98+提升至99.9/99.7/99.6；</font></li>
-           <li><font size="2" face="宋体">&nbsp 2) 已经设计PSI抽样特征实现模型运行效率提高。目前特征从27降至7个，在实现高精度加密通信的同时单次运行效率达万分之三秒左右；</font></li>
-           <li><font size="2" face="宋体">&nbsp 3) 参加国际隐私保护和数据安全最高规格竞赛iDASH 2022-Task 4，并在该赛道以99.39的超高精度超过蚂蚁集团(去年双赛道冠军，99.04)等所有竞争对手斩获模型精度第一，综合隐私通信效率后摘得第二名。[<a href="./Diving(MPT2019)/prize.pdf" target="_blank">Prize</a>]</font></li>
+           <li><font size="2" face="宋体">1.开发联合概率密度与错误标签后验概率的高精度模型，针对隐私加密通信数据具有极高的检索/判断精度。对于1K/5K/1W数量的未知加密样本，模型平均精度从98+提升至99.9/99.7/99.6；</font></li>
+           <li><font size="2" face="宋体">2.PSI抽样特征从27降至7个，在实现高精度加密通信的同时单次运行效率达万分之三秒左右；</font></li>
+           <li><font size="2" face="宋体">3.参加iDASH 2022-Task 4，并在该赛道以99.39的超高精度超过蚂蚁集团(去年双赛道冠军，99.04)等所有竞争对手斩获模型精度第一，综合隐私通信效率后获得第二名。[<a href="./Awards/22iDASH.jpg" target="_blank">Prize</a>]</font></li>
            </ul>
       </td>
     </tr>
