--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
       <td style="border-top:1px solid lightgray;"> 
            <font size="3" face="楷体_GB2312"> 业务大模型(金融)-预训练、SFT的完整链路</font> 
            <ul>
-           <li><font size="2" face="宋体">1. 基于英文的llama2-70B模型拓展中文和金融能力，探索扩充词表和训练方案的最优组合；</font></li>
-           <li> &nbsp&nbsp <font size="2" face="宋体">Few-shot对比：(with llama2原始模型) 英文能力+0，中文能力+7.5，金融能力+8.1；(with GPT3.5模型) 英文能力-1.7，中文能力+5.6，金融能力+11；</font></li>
+           <li><font size="2" face="宋体">1. 基于英文的llama2-70B模型拓展中文和金融能力，探索扩充词表和训练方案的最优组合；Few-shot对比：(with llama2原始模型) 英文能力+0，中文能力+7.5，金融能力+8.1；(with GPT3.5模型) 英文能力-1.7，中文能力+5.6，金融能力+11；</font></li>
            <li><font size="2" face="宋体">2. 进行金融的指令微调训练，获得财报总结、行情异动分析等To B业务的可交互的定制化功能；</font></li>
            <li><font size="2" face="宋体">3. 性能优越的预训练模型提供给保险业务大模型、通用SFT大模型研究等多个业务作为base model使用。</font></li>
            </ul>
